feat: release v1.6.0 with interactive updates and reviewed catalog
Add interactive CLI and skill update notifications, complete the 275-skill review with recorded evaluation evidence, and validate single-word registry references. Align workspace versions and release notes for v1.6.0.