@@ -1,17 +1,22 @@
 # numactl, numastat and perf
 
+Use existing matching output for a narrow interpretation. Before filtering a new command,
+preserve its full stdout/stderr and exit status with target/build identity; a pipeline's last
+status or a blank `grep` result does not establish successful capture, zero events or a disabled
+flag. Check support and permissions before attaching to an owned or authorized target.
+
 ## `numactl` flags, by axis
 
-| Long form               | Short | Axis   | Effect                                                                |
-| ----------------------- | ----- | ------ | --------------------------------------------------------------------- |
-| `--cpunodebind=<nodes>` | `-N`  | CPU    | Restrict execution to the CPUs of the given node(s)                   |
-| `--physcpubind=<cpus>`  | `-C`  | CPU    | Restrict execution to specific CPUs, not whole nodes                  |
-| `--membind=<nodes>`     | `-m`  | Memory | Allocate **only** from the given node(s); fails when exhausted        |
-| `--interleave=<nodes>`  | `-i`  | Memory | Round-robin allocation across the given nodes                         |
-| `--preferred=<node>`    | `-p`  | Memory | Prefer one node, fall back to another when exhausted (one node)       |
-| `--localalloc`          | `-l`  | Memory | Allocate from the node the allocating thread runs on (kernel default) |
-| `--hardware`            | `-H`  | Query  | Nodes, CPUs per node, memory per node, distance matrix                |
-| `--show`                | `-s`  | Query  | The current process or shell NUMA policy                              |
+| Long form               | Short | Axis   | Effect                                                                            |
+| ----------------------- | ----- | ------ | --------------------------------------------------------------------------------- |
+| `--cpunodebind=<nodes>` | `-N`  | CPU    | Restrict execution to the CPUs of the given node(s)                               |
+| `--physcpubind=<cpus>`  | `-C`  | CPU    | Restrict execution to specific CPUs, not whole nodes                              |
+| `--membind=<nodes>`     | `-m`  | Memory | Allocate **only** from the given node(s); fails when exhausted                    |
+| `--interleave=<nodes>`  | `-i`  | Memory | Interleave allocation across nodes, with fallback if a target cannot satisfy it   |
+| `--preferred=<node>`    | `-p`  | Memory | Prefer one node, fall back to another when exhausted (one node)                   |
+| `--localalloc`          | `-l`  | Memory | Prefer the current node, with fallback; more-specific policy may override         |
+| `--hardware`            | `-H`  | Query  | Nodes, CPUs per node, memory per node, distance matrix                            |
+| `--show`                | `-s`  | Query  | This numactl process's policy, inherited at launch; not an arbitrary JVM's policy |
 
 numactl 2.0.19 retains `--cpubind` as a deprecated option; prefer `--cpunodebind` for node
 selection and `--physcpubind` for CPU selection. Check installed help/source and actual
@@ -60,7 +65,14 @@ Java heap mappings commonly contribute to Private/Huge categories. Correlate map
 ranges with JVM evidence before calling any row Java heap. `numastat -s` sorts by total (or
 selected node); `-c` controls compact display. Use `-p <pid>` explicitly for process selection.
 
-## Valid `perf` events
+In numastat 2.0.19, failure to open `/proc/<pid>/numa_maps` reports an error and continues;
+a printed table and a successful exit alone do not prove that process memory was read.
+Retain stderr and treat a missing/denied process as missing evidence, not zero residence.
+
+## Candidate `perf` events
+
+The following are generic node-cache aliases to check on the target, not a guaranteed PMU
+counter set or a portable definition of remote Java-heap accesses:
 
 ```bash
 perf list | grep node
@@ -74,11 +86,12 @@ perf stat -e node-loads,node-load-misses,node-stores,node-store-misses -p <pid> 
 
 `numa_miss` is a `numastat` metric read from kernel memory-management counters
 (`/sys/devices/system/node/nodeN/numastat`), a completely different source from the hardware
-PMU that `perf` samples. `perf stat -e numa_miss` fails with "event not found".
+PMU that `perf` samples. Do not use `perf stat -e numa_miss` as a portable way to read that
+kernel counter. If the target exposes a custom event with that name, inspect its actual definition.
 
-Availability of the `node-*` events depends on the chip's PMU and the kernel driver, and
-varies by SoC on aarch64. Check `perf list | grep node` first: an event absent from the list,
-or `<not supported>` in `perf stat` output, is not the same as zero NUMA misses.
+Availability and interpretation of the `node-*` events depend on the target PMU and kernel
+driver. Check `perf list | grep node` first: an event absent from the list, or `<not supported>`
+in `perf stat` output, is not the same as zero NUMA misses.
 
 ## Attributing node misses to Java methods
 
@@ -101,7 +114,7 @@ page was remotely accessed. Confirm with controlled placement changes and outcom
 ## Topology and current binding
 
 ```bash
-numactl --hardware | head -1                  # available: N nodes (0-N)
+numactl --hardware | head -1                  # summary only; node IDs may be sparse
 numactl --hardware                          # retain the complete matrix
 # node distances:
 # node   0   1
@@ -113,16 +126,16 @@ Node IDs may be sparse. Distances are relative firmware topology values, not mea
 latencies; preserve all nodes and correlate with memory bandwidth/latency evidence.
 
 ```bash
-cat /proc/<pid>/status | grep -i cpus_allowed
+cat /proc/<pid>/status | grep -iE 'Cpus_allowed|Mems_allowed'
 taskset -ap <pid>                             # masks for all current threads; support varies
 java <same-collector-and-options> -XX:+PrintFlagsFinal -version 2>&1 | grep UseNUMA
-jcmd <pid> VM.flags | grep -i numa
+jcmd <pid> VM.flags -all | grep -i numa
 ```
 
 ## Mapping GC threads to nodes
 
-`-Xlog:gc+init=debug` tells you how many workers exist and whether NUMA support is on — GC
-worker sizing happens at JVM init, so it prints even with `-version`:
+The G1 example below reports worker counts and NUMA support at JVM initialization,
+including with `-version`:
 
 ```bash
 java -XX:+UseG1GC -Xlog:gc+init=debug -version 2>&1 | grep -iE "worker|numa"
@@ -151,4 +164,7 @@ node.
 
 - [numactl 2.0.19 options](https://github.com/numactl/numactl/blob/v2.0.19/numactl.c): deprecated cpubind retained.
 - [numastat 2.0.19](https://github.com/numactl/numactl/blob/v2.0.19/numastat.c): mapping categories, units and sorting.
+- [Linux 6.10 NUMA memory policy](https://github.com/torvalds/linux/blob/v6.10/Documentation/admin-guide/mm/numa_memory_policy.rst): task/VMA policy, allowed nodes and allocation behavior.
+- [Linux perf 6.10 generic cache aliases](https://github.com/torvalds/linux/blob/v6.10/tools/perf/util/evsel.c): node/load/store/miss names do not establish target PMU support.
+- [Linux 6.10 process stat/status](https://github.com/torvalds/linux/blob/v6.10/fs/proc/array.c): command-name delimiters, CPU field and allowed masks.
 - [async-profiler v4.4 profiling modes](https://github.com/async-profiler/async-profiler/blob/v4.4/docs/ProfilingModes.md): supported perf event forms.
