@@ -6,8 +6,8 @@
 1. The VM thread signals: safepoint requested
 2. Each Java thread reacts at its next opportunity:
      compiled code (C1/C2)  → tests its polling word at the next emitted poll
-     blocked (sleep, I/O, synchronized, park) → already in a safe state by definition
-     native code (JNI/FFM)  → ordinary native state is already safe; return transition checks
+     HotSpot-recognized stable blocked state → safe without running Java to acknowledge
+     ordinary native state → safe when stack-walkability requirements hold; return transition checks
 3. The VM thread waits for the LAST required thread            ← sync time
 4. The VM thread executes the operation (GC, deopt, dump, ...)  ← operation time
 5. The safepoint is released; threads become eligible to resume (OS scheduling still applies)
@@ -16,18 +16,21 @@
 A runnable Java/VM-transition thread that does not reach a safe state can dictate sync time.
 An ordinary thread already in JNI/FFM native state does not; JNI critical regions can delay
 particular GC progress and must be diagnosed as that mechanism rather than generic TTSP.
+These are HotSpot internal states, not `java.lang.Thread.State` or classifications inferred
+from a source operation such as I/O or `synchronized`. Stable state observation, walkable
+Java frames and transition barriers matter; the Java enum alone does not prove them.
 
-## Expected TTSP by thread state
+## Polling opportunities by execution state
 
-| Thread state                                     | Typical TTSP                     | Why                                                                          |
-| ------------------------------------------------ | -------------------------------- | ---------------------------------------------------------------------------- |
-| Blocked (sleep / wait / park / I/O)              | ≈ 0                              | Already safe; the JVM only has to observe it                                 |
-| Interpreted code                                 | a few instructions               | The interpreter checks at control-flow bytecodes                             |
-| Compiled ordinary loop                           | emitted poll interval            | Inspect compiler/OSR code; not every source back-edge maps to a poll         |
-| C2, strip-mined counted loop — G1/ZGC/Shenandoah | roughly one strip of computation | Outer-loop poll when transformation actually applies                         |
-| C2, counted loop — Parallel/Serial               | potentially long                 | strip-mining polls disabled on tested build; surrounding checks still matter |
-| Native (ordinary JNI/FFM state)                  | already safe                     | return-to-Java transition synchronizes before Java resumes                   |
-| Runtime transition / JNI critical path           | mechanism-specific               | prove thread state, GC-locker/critical evidence and aligned stack            |
+| Execution state                                  | Synchronization consideration      | Why                                                                               |
+| ------------------------------------------------ | ---------------------------------- | --------------------------------------------------------------------------------- |
+| HotSpot-recognized stable blocked state          | No Java execution required         | Safe-state observation/coordination still takes time; a Java enum is insufficient |
+| Interpreted code                                 | Relevant dispatch/transition check | Branch/return polling does not imply a fixed instruction or wall-time bound       |
+| Compiled ordinary loop                           | emitted poll interval              | Inspect compiler/OSR code; not every source back-edge maps to a poll              |
+| C2, strip-mined counted loop — G1/ZGC/Shenandoah | roughly one strip of computation   | Outer-loop poll when transformation actually applies                              |
+| C2, counted loop — Parallel/Serial               | potentially long                   | strip-mining polls disabled on tested build; surrounding checks still matter      |
+| Native (ordinary JNI/FFM state)                  | already safe                       | return-to-Java transition synchronizes before Java resumes                        |
+| Runtime transition / JNI critical path           | mechanism-specific                 | prove thread state, GC-locker/critical evidence and aligned stack                 |
 
 Host descheduling/page faults can stretch any runnable thread's acknowledgement; combine
 thread state with OS scheduling evidence rather than reading this table as deterministic.
@@ -37,18 +40,18 @@ thread state with OS scheduling evidence rather than reading this table as deter
 ```
 p99 / p99.9 worse than the GC logs explain
 │
-├─ 1. Enable -Xlog:safepoint=info; correlate with the peak.
+├─ 1. Use adequate safepoint evidence, or collect missing coverage; correlate with the peak.
 │     Align individual safepoint and GC intervals; sums describe process occupancy,
 │     not a decomposition of endpoint p99 or the delay of every affected request.
 │
 ├─ 2. Which term dominates?
 │       "Reaching safepoint" high → step 3
-│       "At safepoint" high       → not a safepoint problem; it is the operation
+│       "At safepoint" high       → safepoint time dominated by operation/cleanup, not TTSP
 │                                    (collector tuning, or the deoptimisation cause)
 │
 ├─ 3. Which thread is late?
-│       -XX:+SafepointTimeout -XX:SafepointTimeoutDelay=<low ms>  → NAME and state of the late thread
-│       async-profiler wall-clock on that thread, same window     → what it was doing
+│       existing evidence or a suitably derived SafepointTimeoutDelay → remaining-thread snapshot
+│       aligned stack/profile and scheduling evidence               → candidate activity/cause
 │
 ├─ 4. Classify:
 │       ordinary JNI/FFM native state        → already safe; investigate only critical/transition evidence
@@ -57,7 +60,8 @@ p99 / p99.9 worse than the GC logs explain
 │       counted loop, expensive body         → consider lowering LoopStripMiningIter
 │       frequent non-GC operation            → pause-attribution's layer table (ThreadDump, HeapDumper, …)
 │
-└─ 5. Fix ONE cause, then repeat the same measurement with the same procedure.
+└─ 5. For a supported change, isolate the cause and repeat relevant measurements;
+      otherwise retain the adequate design or state the remaining attribution gap.
 ```
 
 ## Cause to strategy
@@ -76,10 +80,13 @@ latency; splitting work does not preserve throughput by definition.
 
 ## Before proposing a fix
 
-- [ ] Sync time summed separately from operation time for the incident window
-- [ ] `-Xlog:gc` and `-Xlog:safepoint` compared over the _same_ interval
-- [ ] Late thread/state evidence aligned with stack and scheduling data; missing evidence reported
-- [ ] The proposed flag confirmed **not** to be the default already, in the target runtime
+Apply the checks needed for the proposed claim/change; a narrow explanation or supported
+no-change decision need not complete an unrelated diagnostic matrix.
+
+- [ ] Relevant cycle/sync/operation timing distinguished; use aggregates only for the matching claim
+- [ ] When attributing a GC-related pause, GC and safepoint evidence compared over the _same_ interval
+- [ ] When naming a late-thread cause, align state, stack and scheduling evidence; preserve independent valid timing if cause evidence is missing
+- [ ] Proposed flag change compared with effective target values using a successful probe or process evidence
 - [ ] If a JNI critical/transition cause is proven, remediation measured before and after
 - [ ] If profiling is suspected, sampler trigger/reconstruction, loss and bias limits understood;
       deferred cooperative stack walking alone is not proof of safepoint-biased attribution
